# flotorch-evaluator

./: README.md  pyproject.toml  stack.json
evaluator/: evaluator.py
fargate/: base_task_processor.py  evaluator_processor.py
fargate/handler/evaluator/: Dockerfile  fargate_evaluator_handler.py
