[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flotorch-evaluator"
version = "2.5.0"
description = "A Python project for FloTorch"
authors = [
    { name = "Shiva Krishna", email = "shiva.krishnaah@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "FloTorch-core==2.9.8"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4", 
    "testcontainers==4.9.0",
    "minio==7.2.15",
    "moto==5.0.27"
    ]

[tool.setuptools]
# Slowly move the whole code to src so that on the higher level it looks clean
# src = source code 
# tests = Test code
packages = { find = {} }  # Automatically finds all packages in your source.

[tool.flake8]
max-line-length = 88
